# v15

./: README.md
rp2040_cyw4373_emulator_v4_15_fast_attach_github_uf2/: CMakeLists.txt  build_local.sh  build_local_windows.bat
rp2040_cyw4373_emulator_v4_15_fast_attach_github_uf2/src/: main.c  tusb_config.h  usb_descriptors.c
